[metadata]
name = twobodyproblem
version = 1.0.0
author = Florian Frauenfelder
author_email = florian.l.frauenfelder@gmail.com
description = This is a little simulation for the gravitational two body problem.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flopsi-l-f/two-body-problem_simulation
keywords = simulation, gravitation, pyside, vpython
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pyyaml >= 5.4.1
    pyside6 >= 6.0.1
    vpython >= 7.6.1
    scipy >= 1.6.1

[options.package_data]
twobodyproblem =
    ui/*.ui
    ui/icon.gif
    saved_data/presets.yml