[metadata]
name = twobodyproblem
version = attr: twobodyproblem.__version__
author = Florian Frauenfelder
author_email = florian.l.frauenfelder@gmail.com
description = a little simulation for the gravitational two body problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Two-Body-Problem/twobodyproblem-simulation-python
keywords = simulation, gravitation, vpython
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    pyyaml >= 5.4.1
    vpython >= 7.6.1

[options.package_data]
twobodyproblem =
    ui/*.ui
    ui/icon.gif
    saved_data/presets.yml